Fixes a bug with the height of the api-tree in the default theme. The api tree in the left column of the default theme has a CSS height of 100%. Because of the search form and version switcher at the top of the left column, the api tree is too high and can't be scrolled completely down, leaving the items displayed at the botom invisible. This fixes the issue using a CSS flexbox while remaining fully compatible to browsers not supporting flexbox (those have to live woth the invisible items).

--- a/Sami/Resources/themes/default/css/sami.css
+++ b/Sami/Resources/themes/default/css/sami.css
@@ -60,6 +60,8 @@ html, body, #content {
     border-right: 1px solid #ccc;
     line-height: 18px;
     font-size: 13px;
+    display: flex;
+    flex-flow: column;
 }
 
 @media (max-width: 991px) {
